--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -66,7 +66,7 @@
     <ul id="foot">
         <li>+971232312</li>
         <li>empresa@reclamos.cl</li>
-        <li>redes sociales </li>
+        <li><a href="/backend/index.php?logout">Cerrar Sesion</a></li>
     </ul>
 </footer>
 
