--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+.ticket {
+    display: flex;
+    margin: 0.5em;
+    flex-direction: column;
+    padding: 1em;
+    cursor: pointer;
+
+    h2 {
+        padding-bottom: 0.5em;
+        border-bottom: 1px solid black;
+    }
+}
+
+.ticket-info {
+    display: flex;
+
+    h3 {
+        flex: 1;
+    }
+}
+
+.ticket-response {
+    background-color: #0003; 
+    padding: 0.2em;
+}
+
+.pr2{
+    text-align: left;
+    display: flex;
+    background-color: indianred;
+}
+
+.pr1{
+    text-align: left;
+    display: flex;
+    background-color: yellow;
+}
+
+.pr0{
+    text-align: left;
+    display: flex;
+    background-color: green;
+}
